--- a/src/design/_functions.scss
+++ b/src/design/_functions.scss
@@ -1,5 +1,10 @@
 @import 'variables';
 
-@function size($value) {
+@function size($value: 1) {
   @return $value * $size-base;
+}
+
+// @TODO: move column count to different config
+@function columnSize($count: 1) {
+  @return calc(100% / 12 * #{$count});
 }
