--- a/src/components/v-container/v-container.scss
+++ b/src/components/v-container/v-container.scss
@@ -2,7 +2,7 @@
 
 .container {
   width: 100%;
-  padding: size(2);
+  padding: 0 size(2);
 
   @include respond-to('smaller') {
     width: $breakpoint-smaller;
