--- a/src/components/v-section-intro/v-section-intro.scss
+++ b/src/components/v-section-intro/v-section-intro.scss
@@ -1,5 +1,8 @@
 @import '~@design';
+
 .intro-wrapper {
+  position: relative;
+  z-index: 1;
   background: url('~@assets/Vuelendar-background.png') no-repeat 125% 100%;
   background-size: contain;
 }
