Add animation on viewport on some elements

--- a/src/components/v-perks-table/v-perks-table.scss
+++ b/src/components/v-perks-table/v-perks-table.scss
@@ -3,8 +3,9 @@
 .perks-table {
   display: flex;
   flex-wrap: wrap;
+  overflow: hidden;
   background: $color-white;
-  border-radius: size(2);
+  border-radius: size(4);
   box-shadow: 0 30px 20px -10px rgba(0, 0, 0, 0.2);
 
   &__item {
@@ -14,6 +15,9 @@
     justify-content: center;
     width: 50%;
     height: size(56);
+    opacity: 0;
+    transition: opacity 400ms ease-in-out;
+    transform: translateY(size(5));
 
     &:nth-child(n + 3) {
       border-top: 1px solid $color-gray-100;
@@ -21,6 +25,10 @@
 
     &:nth-child(even) {
       border-left: 1px solid $color-gray-100;
+    }
+
+    &.in-viewport {
+      opacity: 1;
     }
   }
 
