Add cursor interaction to navigation icons, Change hover effect on ghost button

--- a/src/components/v-button/v-button.scss
+++ b/src/components/v-button/v-button.scss
@@ -32,7 +32,7 @@
     &:focus,
     &:active {
       color: darken($color-green-500, 20);
-      background-color: rgba(darken($color-green-500, 20), 0.08);
+      background-color: transparent;
     }
   }
 
