--- a/src/components/v-steps-list/v-steps-list.scss
+++ b/src/components/v-steps-list/v-steps-list.scss
@@ -2,14 +2,13 @@
 
 .steps-list {
   padding: 0;
+  margin: size(10) 0 0 0;
   list-style: none;
   counter-reset: item;
 
   &__item {
     position: relative;
-    padding-right: 20%;
     padding-bottom: size(15);
-    padding-left: 20%;
     counter-increment: item;
 
     &:not(:last-child) {
@@ -18,17 +17,28 @@
     }
 
     &:before {
-      position: absolute;
-      top: size(-4);
-      left: 0;
-      font-size: 120px;
-      font-weight: 300;
-      line-height: 1;
-      color: $color-green-500;
-      content: counter(item);
-      opacity: 0;
-      transition: transform 400ms ease-out, opacity 400ms ease-in-out;
-      transform: translateX(size(10));
+      @include respond-to('smaller') {
+        position: absolute;
+        top: size(-4);
+        left: 0;
+        font-size: 120px;
+        font-weight: 300;
+        line-height: 1;
+        color: $color-green-500;
+        content: counter(item);
+        opacity: 0;
+        transition: transform 400ms ease-out, opacity 400ms ease-in-out;
+        transform: translateX(size(10));
+      }
+    }
+
+    @include respond-to('smaller') {
+      padding-left: 20%;
+    }
+
+    @include respond-to('large') {
+      padding-right: 20%;
+      padding-left: 20%;
     }
 
     &.in-viewport {
@@ -46,14 +56,22 @@
     color: $color-green-500;
 
     &:before {
-      position: absolute;
-      top: 50%;
-      left: size(-6);
-      width: size(13);
-      height: 1px;
-      content: '';
-      background-color: $color-green-500;
-      transform: translateX(-100%);
+      content: counter(item) '. ';
+
+      @include respond-to('smaller') {
+        content: none;
+      }
+
+      @include respond-to('large') {
+        position: absolute;
+        top: 50%;
+        left: size(-6);
+        width: size(13);
+        height: 1px;
+        content: '';
+        background-color: $color-green-500;
+        transform: translateX(-100%);
+      }
     }
   }
 
