--- a/src/components/v-navigation/v-navigation.scss
+++ b/src/components/v-navigation/v-navigation.scss
@@ -5,7 +5,7 @@
   align-items: flex-start;
   justify-content: space-between;
 
-  &__main {
+  &__desktop {
     display: none;
 
     @include respond-to('medium') {
@@ -13,76 +13,29 @@
     }
   }
 
-  &__list {
+  &__mobile {
+    @include respond-to('medium') {
+      display: none;
+    }
+  }
+
+  &__toggle {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
+    justify-content: center;
+    width: size(10);
+    height: size(10);
     padding: 0;
-    margin: 0;
-    list-style: none;
-  }
+    background-color: $color-white;
+    border: 1px solid $color-green-500;
 
-  &__item {
-    margin-left: size(13);
-
-    &:first-child {
-      margin-left: 0;
-    }
-  }
-
-  &__link {
-    position: relative;
-    display: inline-block;
-    font-size: 24px;
-    font-weight: 500;
-    color: $color-gray-800;
-    text-decoration: none;
-    transition: color 250ms ease-in-out;
-
-    &:after {
-      position: absolute;
-      top: 100%;
-      left: 0;
-      width: 100%;
-      height: 2px;
-      content: '';
-      background-color: currentColor;
-      transition: transform 250ms ease-in-out;
-      transform: scaleX(0);
-    }
-
-    &:hover,
-    &:focus,
-    &:active {
-      color: $color-green-500;
-
-      &:after {
-        transform: scaleX(1);
-      }
-    }
-
-    &--icon,
-    &--blank {
-      &:after {
-        content: none;
-      }
-    }
-
-    &--icon {
-      color: $color-green-500;
-
-      svg {
-        width: size(13);
-        height: size(13);
-        pointer-events: none;
-        fill: currentColor;
-      }
-
-      &:hover,
-      &:focus,
-      &:active {
-        color: $color-gray-800;
-      }
+    span {
+      display: block;
+      width: size(6);
+      height: 1px;
+      margin: 3px 0;
+      background-color: $color-black;
     }
   }
 }
