--- a/src/components/v-sidebar-navlist/v-sidebar-navlist.scss
+++ b/src/components/v-sidebar-navlist/v-sidebar-navlist.scss
@@ -19,6 +19,43 @@
     transform: translateX(0);
   }
 
+  &__header {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    padding: size(3);
+  }
+
+  &__title {
+    margin: 0 size(3) 0 0;
+  }
+
+  &__close {
+    position: relative;
+    width: size(8);
+    height: size(8);
+    padding: 0;
+    margin: 0;
+    background-color: $color-white;
+    border: 1px solid $color-green-500;
+
+    &:before,
+    &:after {
+      position: absolute;
+      top: 50%;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      content: '';
+      background-color: $color-black;
+      transform: rotate(-45deg);
+    }
+
+    &:after {
+      transform: rotate(45deg);
+    }
+  }
+
   &__list {
     padding: 0;
     margin: 0;
