--- a/src/components/v-inline-navlist/v-inline-navlist.scss
+++ b/src/components/v-inline-navlist/v-inline-navlist.scss
@@ -21,7 +21,7 @@
   &__link {
     position: relative;
     display: inline-block;
-    font-size: 24px;
+    font-size: $font-size-large;
     font-weight: 500;
     color: $color-gray-800;
     text-decoration: none;
