--- a/src/components/v-section-example/v-section-example.scss
+++ b/src/components/v-section-example/v-section-example.scss
@@ -22,13 +22,13 @@
   &__title {
     display: block;
     margin: 0;
-    font-size: 48px;
+    font-size: $font-size-huge;
     font-weight: 500;
   }
 
   &__content {
     margin-bottom: size(16);
-    font-size: 36px;
+    font-size: $font-size-xlarge;
     font-weight: 300;
   }
 }
