--- a/src/components/v-section/v-section.scss
+++ b/src/components/v-section/v-section.scss
@@ -7,7 +7,8 @@
 
   &__title {
     margin: 0;
-    font-size: 24px;
+    font-size: $font-size-large;
+    font-weight: 500;
     color: $color-gray-800;
 
     a {
