Change features pagt to home, Revert animations on home page, set build to modern mode

--- a/src/components/v-perks-table/v-perks-table.scss
+++ b/src/components/v-perks-table/v-perks-table.scss
@@ -15,7 +15,9 @@
     justify-content: center;
     width: 100%;
     height: size(56);
+    opacity: 0;
     transition: opacity 400ms ease-in-out;
+    transform: translateY(size(5));
 
     @include respond-to('small-max') {
       border-top: 1px solid $color-gray-100;
@@ -35,6 +37,10 @@
       &:nth-child(even) {
         border-left: 1px solid $color-gray-100;
       }
+    }
+
+    &.in-viewport {
+      opacity: 1;
     }
   }
 
