--- a/src/components/v-side-nav/v-side-nav.scss
+++ b/src/components/v-side-nav/v-side-nav.scss
@@ -4,7 +4,7 @@
   position: sticky;
   top: size(2);
   width: 250px;
-  padding: 0 size(3);
+  padding: 0 0 0 size(10);
   font-size: 16px;
 
   &__list {
@@ -21,8 +21,9 @@
     position: relative;
     display: inline-block;
     margin-bottom: size(1);
-    color: $color-gray-800;
+    color: $color-gray-700;
     text-decoration: none;
+    transition: color 250ms ease-in-out;
 
     &:after {
       position: absolute;
@@ -40,6 +41,8 @@
     &:hover,
     &:focus,
     &:active {
+      color: $color-black;
+
       &:after {
         transform: scaleX(1);
       }
