--- a/src/components/v-sidebar-navlist/v-sidebar-navlist.scss
+++ b/src/components/v-sidebar-navlist/v-sidebar-navlist.scss
@@ -72,7 +72,7 @@
     display: block;
     padding: size(3) size(2);
     font-size: $font-size-normal;
-    color: $color-black;
+    color: $color-gray-800;
     text-align: right;
     text-decoration: none;
 
