--- a/src/design/_typography.scss
+++ b/src/design/_typography.scss
@@ -6,3 +6,5 @@ $font-size-huge: 3rem;
 $font-size-xlarge: 1.5rem;
 $font-size-large: 1.2rem;
 $font-size-normal: 1rem;
+$font-size-small: 0.8rem;
+$font-size-micro: 0.5rem;
